--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.5.0
@@ -40,6 +40,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.1
   google_mobile_ads: ^5.1.0
+  audioplayers: ^6.1.0
+  hugeicons: ^0.0.7
   # flutter_coupang_ad: ^1.0.0-dev.3
   # flutter_native_splash: ^2.4.1
 
@@ -88,7 +90,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/splash.png
-  #   - images/a_dot_ham.jpeg
+    - assets/bgm/count_down.mp3
+    - assets/bgm/start_sound.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
